--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -71,11 +71,11 @@ height: 132px;
 }
 
 .footer {
-  min-height: 150px;
+  min-height: 40px;
   text-align: center;
-  line-height: 100px;
+  line-height: 7px;
   font-size: 14px;
-  margin-top: 35px;
+  margin-top: 80px;
   border-top: 3px solid black;
   padding-top: 45px;
   background: #f5f5f5;
@@ -91,6 +91,7 @@ height: 132px;
   font-weight: 400;
   font-size: 60px;
   margin-bottom: 0px;
+  margin-top: 80px;
 }
 .home strong{
   color: #fa4529;
@@ -99,6 +100,7 @@ height: 132px;
   color: rgb(98, 97, 97);
   font-weight: lighter;
 }
+
 
 .home a{
   background-color:#fa4529;
@@ -114,9 +116,44 @@ height: 132px;
 .home a:hover {
   background-color: cornflowerblue;
 }
+.page .heading,
 .home .heading{
   font-size: 25px;
   font-weight: 500;
   color: black;
   margin-bottom: 0px;
+}
+
+.page .heading{
+  font-size: 55px;
+  font-weight: bold;
+}
+.home p{
+  color:  rgb(98, 97, 97);
+}
+
+input[type="text"],
+textarea{
+  padding: 15px;
+  display: block; /*Con display block hacemos que cada elemento ocupe una linea*/
+  margin-top: 25px;
+  width: 250px;
+}
+
+input[type="submit"],
+button{
+  background-color:#fa4529;
+  text-decoration: none;
+  font-size: 15px;
+  margin-top: 5px;
+  color: wheat;
+  padding: 10px;
+  border: 0px;
+  border-radius: 5px;
+  transition: all 300ms;
+}
+
+input:hover[type="submit"],
+button:hover{
+  background-color: cornflowerblue;
 }
