--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -157,3 +157,53 @@ input:hover[type="submit"],
 button:hover{
   background-color: cornflowerblue;
 }
+
+.works{
+  display: flex;
+  flex-wrap: wrap;
+}
+.work-item{
+flex-basis: 15%;
+flex-grow: 1;
+margin: 30px;
+}
+
+.work-item .mask{
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px gray;
+}
+.work-item img{
+  width: 100%;
+  transition: all 500ms; 
+}
+.work-item .mask:hover img{
+  width: 105%;
+  margin-right: 30%;
+}
+.work-item h2{
+  display: block;
+  font-size: 20px;
+  color: black;
+  margin-top: 20px;
+}
+
+.work-item a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.work-item a:hover{
+  color: #fa4529;
+}
+
+.work-item h3{
+  display: block;
+  font-size: 20px;
+  padding-top: 15px;
+  border-top: 3px solid black;
+  color: gray;
+  margin-top: 10px;
+}
