--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -207,3 +207,11 @@ margin: 30px;
   color: gray;
   margin-top: 10px;
 }
+
+.page-work .mask{
+  height: 300px;
+  overflow: hidden;
+  box-shadow: 0px 0px 20px black;
+  display: flex;
+  justify-content: center;
+}
