--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -102,7 +102,7 @@ height: 132px;
 }
 
 
-.home a{
+.home .title a{
   background-color:#fa4529;
   text-decoration: none;
   font-size: 20px;
@@ -113,7 +113,7 @@ height: 132px;
   transition: all 300ms;
 }
 
-.home a:hover {
+.home .title a:hover {
   background-color: cornflowerblue;
 }
 .page .heading,
